config/kubernetes/qa/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: track-a-query
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: track-a-query
  template:
    metadata:
      labels:
        app: track-a-query
    spec:
      containers:
        - name: webapp
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/correspondence/track-a-query-ecr:latest
          ports:
          - containerPort: 3000
          command: ["./config/docker/entrypoint-webapp.sh"]
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 3000
              httpHeaders:
                - name: X-Forwarded-Proto
                  value: https
                - name: X-Forwarded-Ssl
                  value: "on"
            initialDelaySeconds: 40
            periodSeconds: 60
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 3000
              httpHeaders:
                - name: X-Forwarded-Proto
                  value: https
                - name: X-Forwarded-Ssl
                  value: "on"
            initialDelaySeconds: 40
            periodSeconds: 60
        - name: jobs
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/correspondence/track-a-query-ecr:latest
          command: ["./config/docker/entrypoint-background-jobs.sh"]
        - name: uploads
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/correspondence/track-a-query-ecr:latest
          command: ["./config/docker/entrypoint-uploads.sh"]
