config/kubernetes/qa/deployment_sidekiq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: track-a-query-jobs
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: track-a-query-jobs
  template:
    metadata:
      labels:
        app: track-a-query-jobs
    spec:
      containers:
        - name: jobs
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/correspondence/track-a-query-ecr:latest
          command: ["./config/docker/entrypoint-background-jobs.sh"]
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - 'sidekiqmon | grep "track-a-query-jobs"'
            initialDelaySeconds: 40
            periodSeconds: 60
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - 'sidekiqmon | grep "track-a-query-jobs"'
            initialDelaySeconds: 40
            periodSeconds: 60
