config/kubernetes/qa/ingress-live.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: track-a-query-ingress
  namespace: track-a-query-qa
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: track-a-query-ingress-track-a-query-qa-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
      SecDefaultAction "phase:2,pass,log,tag:github_team=central-digital-product-team,tag:namespace=track-a-query-qa"
spec:
  ingressClassName: modsec
  tls:
    - hosts:
        - qa.track-a-query.service.justice.gov.uk
      secretName: track-a-query-certificate
  rules:
    - host: qa.track-a-query.service.justice.gov.uk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: track-a-query-service
                port:
                  number: 3000
