config/kubernetes/qa/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: track-a-query-ingress
  namespace: track-a-query-qa
spec:
  tls:
    - hosts:
        - qa.track-a-query.service.justice.gov.uk
      secretName: track-a-query-certificate
  rules:
    - host: qa.track-a-query.service.justice.gov.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: track-a-query-service
              servicePort: 3000
